--- a/templates/DishesList.html
+++ b/templates/DishesList.html
@@ -5,9 +5,13 @@
 {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">
 <h1>Категорії :</h1>
- {% for item in All_dishes %}
+<h2 class="container mt-3">Гарніри:</h2>
+
+{% for item in All_dishes %}
+
+
 <div class="container mt-3">
-  <h2>Гарніри:</h2>
+
 
   <div class="card" style="width:400px">
     {% if item.image %}
@@ -20,8 +24,11 @@
 
     </div>
   </div>
-  <br>
-{% endfor %}
+
+
+
+
+  {% endfor %}
 
 
 {% endblock %}
