--- a/templates/base.html
+++ b/templates/base.html
@@ -30,13 +30,38 @@
           <a class="nav-link" href="{% url 'cafeApp:dishes-list' %}" class="btn btn-secondary">Меню</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Логін</a>
+          {% if not user.is_authenticated %}
+            <a class="nav-link" href="{% url 'cafeApp:login'%}">Логін</a>
+          {% endif %}
+
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'cafeApp:register' %}">Реєстрація</a>
+          {% if not user.is_authenticated %}
+            <a class="nav-link" href="{% url 'cafeApp:register' %}">Реєстрація</a>
+          {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'cafeApp:shopping-cart' %}" class="btn btn-secondary" class="cart">Корзина</a>
+            {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'cafeApp:shopping-cart' %}" class="btn btn-secondary" class="cart">Корзина</a>
+            {% endif %}
+
+        </li>
+        <li class="nav-item">
+            {% if user.is_authenticated %}
+                <form action="{% url 'cafeApp:logout' %}" method="post" >
+                    {% csrf_token %}
+                    <button class="b" >Вийти</button>
+                </form>
+            {% endif %}
+        </li>
+        <li class="nav-item">
+            {% if not user.is_authenticated %}
+                <a class="nav-link" href="{% url 'cafeApp:order-list' %}">Список замовлень</a>
+            {% endif %}
+        </li>
+
+
+
         </li>
       </ul>
     </div>
