--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,17 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block title %}Вхід{% endblock %}
 
 {% block content %}
+    <h2>Вхід</h2>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Увійти</button>
-</form>
+    {% if form.errors %}
+        <p style="color: red;">Невірний логін або пароль.</p>
+    {% endif %}
 
-
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Увійти</button>
+    </form>
 {% endblock %}
