--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,11 @@
                 </form>
             {% endif %}
         </li>
-
+        <li class="nav-item">
+            {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'cafeApp:order-list' %}" class="btn btn-secondary" class="cart">Мої замовлення</a>
+            {% endif %}
+        </li>
 
 
 
