--- a/templates/DishesList.html
+++ b/templates/DishesList.html
@@ -1,34 +1,41 @@
 {% extends 'base.html' %}
-
 {% block content %}
 
 {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-<h1>Категорії :</h1>
+<link rel="stylesheet" href="{% static 'style.css' %}">
+
+<h1>Категорії:</h1>
+
 <h2 class="container mt-3">Гарніри:</h2>
-
-{% for item in All_dishes %}
-
-
+{% for item in garnishes %}
 <div class="container mt-3">
-
-
   <div class="card" style="width:400px">
     {% if item.image %}
     <img class="card-img-top" src="{{ item.image.url }}" alt="Card image" style="width:100%">
     {% endif %}
     <div class="card-body">
-      <h4 class="card-title">{{item.name}}</h4>
-      <p class="card-text">{{item.price}}</p>
-      <a href="{% url 'cafeApp:add_to_cart' item.pk  %}">Додати до кошика</a>
-
+      <h4 class="card-title">{{ item.name }}</h4>
+      <p class="card-text">{{ item.price }}</p>
+      <a href="{% url 'cafeApp:add_to_cart' item.pk %}">Додати до кошика</a>
     </div>
   </div>
+</div>
+{% endfor %}
 
-
-
-
-  {% endfor %}
-
+<h2 class="container mt-3">Десерти:</h2>
+{% for item in desserts %}
+<div class="container mt-3">
+  <div class="card" style="width:400px">
+    {% if item.image %}
+    <img class="card-img-top" src="{{ item.image.url }}" alt="Card image" style="width:100%">
+    {% endif %}
+    <div class="card-body">
+      <h4 class="card-title">{{ item.name }}</h4>
+      <p class="card-text">{{ item.price }}</p>
+      <a href="{% url 'cafeApp:add_to_cart' item.pk %}">Додати до кошика</a>
+    </div>
+  </div>
+</div>
+{% endfor %}
 
 {% endblock %}
