--- a/templates/DishesList.html
+++ b/templates/DishesList.html
@@ -17,7 +17,7 @@
       <h4 class="card-title">{{ item.name }}</h4>
       <p class="card-text">{{ item.description }}</p>
       <div class="card-footer">
-        <p class="price">{{ item.price }}</p>
+        <p class="price">{{ item.price }} грн</p>
         <a href="{% url 'cafeApp:add_to_cart' item.pk %}" class="btn btn-primary">Додати до кошика</a>
       </div>
     </div>
@@ -36,7 +36,26 @@
       <h4 class="card-title">{{ item.name }}</h4>
       <p class="card-text">{{ item.description }}</p>
       <div class="card-footer">
-        <p class="price">{{ item.price }}</p>
+        <p class="price">{{ item.price }} грн</p>
+        <a href="{% url 'cafeApp:add_to_cart' item.pk %}" class="btn btn-primary">Додати до кошика</a>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+
+<h2 class="container mt-3">Напої:</h2>
+<div class="container desserts-container">
+  {% for item in drinks %}
+  <div class="card">
+    {% if item.image %}
+    <img class="card-img-top" src="{{ item.image.url }}" alt="Card image" style="width:100%">
+    {% endif %}
+    <div class="card-body">
+      <h4 class="card-title">{{ item.name }}</h4>
+      <p class="card-text">{{ item.description }}</p>
+      <div class="card-footer">
+        <p class="price">{{ item.price }} грн</p>
         <a href="{% url 'cafeApp:add_to_cart' item.pk %}" class="btn btn-primary">Додати до кошика</a>
       </div>
     </div>
